2012-10-16  Alan Modra  <amodra@gmail.com>

	* elf32-xtensa.c (free_section_cache): Renamed from
	clear_section_cache.  Don't zero cache.
	(section_cache_section): Remove ineffectual zero of cache.
	Call init_section_cache instead.

2012-10-15  Doug Evans  <dje@google.com>

	* elf.c (special_sections_d): Add comment.

2012-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (LIBDL): Replace -ldl with @lt_cv_dlopen_libs@.
	* configure.in (lt_cv_dlopen_libs): AC_SUBST.
	* Makefile.in: Regenerated.
	* configure: Likewise.

2012-10-08  Alan Modra  <amodra@gmail.com>

	PR binutils/14662
	* elf.c (_bfd_elf_make_section_from_shdr): Treat .gdb_index as
	SEC_DEBUGGING.

2012-09-20  Walter Lee  <walt@tilera.com>

	* elf32-tilepro.c (tilepro_elf_relocate_section): Adjust got
	relocations with value of hgot.
	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.

2012-09-19  Steve Ellcey  <sellcey@mips.com>

	* config.bfd: Add mips*-mti-elf* target.

2012-09-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14591
	* elf-bfd.h (_bfd_elf_merge_symbol): Add an argument to return
	if the old symbol is weak.

	* elf32-sh-symbian.c (sh_symbian_relocate_section): Update
	_bfd_elf_merge_symbol call.

	* elflink.c (_bfd_elf_merge_symbol): Add an argument to return
	if the old symbol is weak.
	(_bfd_elf_add_default_symbol): Update _bfd_elf_merge_symbol
	call.
	(elf_link_add_object_symbols): Don't update symbol type from a
	weak definition.  Update symbol type from a common symbol when
	overriding a weak symbol.

2012-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-i386.c (elf_i386_convert_mov_to_lea): Ignore discarded
	section.
	* elf64-x86-64.c (elf_x86_64_convert_mov_to_lea): Likewise.

2012-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-i386.c (elf_i386_finish_dynamic_symbol): Replace return
	FALSE with abort.
	* elf64-x86-64.c (elf_x86_64_finish_dynamic_symbol): Likewise.

2012-09-17  Walter Lee  <walt@tilera.com>

	* elf32-tilepro.c (tilepro_elf_relocate_section): Remove unused