@@ -1,3 +1,9 @@
+2012-10-16  Sofiane Naci  <sofiane.naci@arm.com>
+
+	* ld-aarch64/tlsle-symbol-offset.s: New file.
+	* ld-aarch64/tlsle-symbol-offset.d: New file.
+	* ld-aarch64/aarch64-elf.exp: Add tlsle-symbol-offset test.
+
 2012-10-08  Joe Seymour  <jseymour@codesourcery.com>
 
 	* ld-scripts/sane1.d: Sort output from nm. Allow for other symbols in
